--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,16 +1,59 @@
-html,
-body {
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
   box-sizing: border-box;
+}
+
+:root {
+  --white: #fff;
+
+  --gray-50: #f7f8fa;
+  --gray-100: #e6e8eb;
+  --gray-200: #afb2b1;
+  --gray-500: #808080;
+  --gray-800: #494d4b;
+
+  --green-500: #04d361;
+
+  --purple-300: #9f75ff;
+  --purple-400: #9164fa;
+  --purple-500: #8257e5;
+  --purple-800: #6f48c9;
+}
+
+//* Modifica o font-size global baseado no width do dispositivo -> Default = 16px / Menos de 1080px = 15px / Menos de 720px = 14px
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%; //? 16px / 0.9375 = 15px
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%; //? 16px / 0.875 = 14px
+  }
+}
+
+body {
+  background: var(--gray-50);
+}
+
+body,
+input,
+textarea,
+button {
+  font: 500 1rem sans-serif;
+  color: var(--gray-500);
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+button {
+  cursor: pointer;
 }
