--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -24,13 +24,13 @@
 //* Modifica o font-size global baseado no width do dispositivo -> Default = 16px / Menos de 1080px = 15px / Menos de 720px = 14px
 @media (max-width: 1080px) {
   html {
-    font-size: 93.75%; //? 16px / 0.9375 = 15px
+    font-size: 93.75%; // 16px x 0.9375 = 15px
   }
 }
 
 @media (max-width: 720px) {
   html {
-    font-size: 87.5%; //? 16px / 0.875 = 14px
+    font-size: 87.5%; // 16px x 0.875 = 14px
   }
 }
 
@@ -44,6 +44,17 @@ textarea,
 button {
   font: 500 1rem sans-serif;
   color: var(--gray-500);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+  font-family: Lexend, sans-serif;
+  color: var(--gray-800);
 }
 
 h1 {
