--- a/components/Player/styles.module.scss
+++ b/components/Player/styles.module.scss
@@ -1,7 +1,7 @@
 .playerContainer {
   padding: 3rem 4rem;
   width: 26.5rem;
-  height: 100vh;
+  // height: 100vh;
   background: var(--purple-500);
   color: var(--white);
   display: flex;
@@ -26,6 +26,28 @@
     &.empty {
       opacity: 0.5;
     }
+  }
+}
+
+.currentEpisode {
+  text-align: center;
+
+  img {
+    border-radius: 1.5rem;
+  }
+
+  strong {
+    display: block;
+    margin-top: 2rem;
+    font: 600 1.25rem Lexend, sans-serif;
+    line-height: 1.75rem;
+  }
+
+  span {
+    display: block;
+    margin-top: 1rem;
+    opacity: 0.6;
+    line-height: 1.6rem;
   }
 }
 
